<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:weightSum="1"
    android:layout_weight="1"
    android:gravity="top">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center"
            android:text="@string/dzialanie"
            android:id="@+id/textView"
           />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ustawienia"
                android:layout_marginLeft="20dp"
                android:id="@+id/button"

            android:layout_gravity="center_horizontal" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nie"
                android:id="@+id/button2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="34dp"
                android:layout_gravity="right" />
    </LinearLayout>

</LinearLayout>

